# Wikipedia-Scraper

./: README.md  pyproject.toml  requirements.txt  setup.py
wikiscraper/: __main__.py
