[tool.poetry]
name = "wikipedia-scraper"
version = "0.1.0"
description = "A basic wikipedia scraper which grabs information from wikipedia.org based on user input."
authors = ["Advait Jadhav"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.8"
wikipedia = "^1.4.0"
click = "^8.0.3"
rich = "^10.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
